--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "framer-motion": "^7.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.8",
+    "reactjs-popup": "^2.0.5",
     "tailwind-scrollbar-hide": "^1.1.7",
     "web-vitals": "^2.1.4"
   },
